@@ -36,6 +36,15 @@
 <div class="document">
 
 
+<p>2011-12-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/command.c (BenchmarkUsage): -stepthreads now requires an
+argument which is the increment (starting at zero) to the number
+of threads for each step.  This hastens benchmarking with a large
+number of cores.</li>
+</ul>
+</blockquote>
 <p>2011-12-07  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;&#46;&#46;">glennrp<span>&#64;</span>simple<span>&#46;</span><span>&#46;</span><span>&#46;</span></a>&gt;</p>
 <blockquote>
 <ul class="simple">
